# student-plc-translator

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  app4realz.py  gui.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yaml
.github/workflows/: CI.yml  build-and-push-image-to-ghcr.yml  make-pyinstaller-artifact.yml  translate-plc-code.yml
DeveloperFolder/: JOMARTINtia_translator.py  NIKOLAItia_translator.py  tc_helpers.py  tia_helpers.py
config/: __init__.py  config.py  local.toml  production.toml
my_tia_code_folder/: MOJO_MB_V1.scl  MOJO_MB_V2.scl
my_translated_code_folder/: README.txt
src/: tia_helpers.py  tia_translator.py
src/examplepackage/: example_module.py
src/plctranslator/: JoMartinSkisse.py  KlasserSkisse.py  KonverteringskisseV2.py  NikolaiSkisse.py  Nikolai_Klasse_Skisse.py  __init__.py  helpers.py  jo martin  jo martin.py  klasser_skisse.py  konverteringskisse_v2.py  something_like_this.py  tc_helpers.py  tia_helpers.py  tia_translator.py
tests/: __init__.py  test_config.py  test_example_module_pytest.py  test_example_module_unittest.py  test_something_like_this.py  test_tia_helpers.py  test_tia_translator.py
tests/converted_data/tcpou/: FB_my_fb.TcPOU
tests/data/: FB_my_fb.scl  MOJO_MB_V1.scl  MOJO_MB_V2.scl  MOJO_SBE_Control_Function_V2.scl  MOJO_SBE_Error_Function_V2.scl  MOJO_SBE_V2.scl  Simple.scl
tests/data/converted/: FB_my_fb.TcPOU
tests/data/testConvertion/: MOJO_MB_V2.TcPOU  OsCmd_MB_V1.TcDUT  OsSta_MB_V1.TcDUT  Param_MB_V1.TcDUT  README.md
