[project]
name = "student-plc-translator"
version = "0.0.1"

dependencies = [
    "colorlog==6.9.0",
    "dacite",
    "customtkinter==5.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff==0.9.3",
    "tzlocal"
]

build = [
    "pyinstaller==6.11.1",
    "pyinstaller-versionfile==2.1.1"
]

[tool.ruff]
line-length = 127

# Minimum python version to target
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "C90",  # mccabe
    "D",  # pydocstyle
    "E", "W",  # pycodestyle error and warning
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "PL",  # Pylint
    "UP",  # pyupgrade
    "YTT",  # flake8-2020
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
]
unfixable = [
    "F841",  # Do not auto-remove unused variables
]
ignore = [
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
]


[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]  # Ignore use of assert for test files

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
exclude = ["venv", "build"]

[[tool.mypy.overrides]]
# Missing type stubs
module = "customtkinter.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-rA --cov-fail-under=50 --cov-report=term --cov=config --cov=src tests/"